# raghub

./: .devcontainer.json  .dockerignore  .flake8  .gitignore  .gitmodules  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  README.zh.md  conftest.py  pyproject.toml  pytest.ini
.devcontainer/: .zsh_history  Dockerfile.dev  README.md  post-create.sh  project.pth
configs/: config.toml  filter_llama3.3-70B-Instruct.json  offline.toml  test-graphrag.toml  test-hipporag.toml  test-online.toml  test.toml
docs/: config.en.md  config.md  config.zh.md  make.py
examples/graphrag/: graph_rag_example.py  graphrag_app_example.py
examples/hipoorag/: example.py  openie.json
examples/hipporag/: app.db  example.py  online.toml
submodules/raghub_interfaces/protos/models/: chat_model.py  context_model.py  messages.json  rag_model.py  services.json
submodules/raghub_interfaces/protos/pb/: chat_pb2.py  chat_pb2_grpc.py  context_pb2.py  context_pb2.pyi  context_pb2_grpc.py  rag_pb2.py  rag_pb2.pyi
